# amplifier-collection-superpowers

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  bundle-dev.md  bundle-minimal.md  bundle-tdd-only.md  collection.yaml  pyproject.toml
agents/: branch-finalizer.md  code-reviewer.md  debugger.md  design-refiner.md  plan-executor.md  plan-writer.md  subagent-orchestrator.md  tdd-enforcer.md  worktree-manager.md
agents/branch-finalizer/: AGENT.md
agents/code-reviewer/: AGENT.md
agents/debugger/: AGENT.md
agents/design-refiner/: AGENT.md
agents/plan-executor/: AGENT.md
agents/plan-writer/: AGENT.md
agents/subagent-orchestrator/: AGENT.md
agents/tdd-enforcer/: AGENT.md
agents/worktree-manager/: AGENT.md
context/: adapter.md  philosophy-bridge.md  workflow-integration.md
docs/plans/: 2025-12-08-superpowers-integration.md
examples/: simple-feature-workflow.md  tdd-enforcement.md
profiles/: superpowers-dev.md  superpowers-dev.md.backup  superpowers-dev.yaml  superpowers-minimal.md  superpowers-minimal.yaml  superpowers-tdd-only.md  superpowers-tdd-only.yaml
scripts/: sync-superpowers.sh  verify-structure.sh
