[project]
name = "superpowers"
version = "1.0.0"
description = "Complete software development workflow with TDD discipline - imported from obra/superpowers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jesse Vincent (obra)"},
    {name = "Adapted for Amplifier by ramparte"}
]

[project.urls]
Homepage = "https://github.com/ramparte/amplifier-collection-superpowers"
Repository = "https://github.com/ramparte/amplifier-collection-superpowers"
Upstream = "https://github.com/obra/superpowers"

[tool.amplifier.collection]
author = "Jesse Vincent (obra) - Adapted by ramparte"
capabilities = [
    "design-refinement",
    "plan-writing",
    "tdd-enforcement",
    "subagent-orchestration",
    "plan-execution",
    "code-review",
    "branch-finalization",
    "systematic-debugging",
    "git-worktree-management",
]

[tool.amplifier.collection.requires]
amplifier-core = ">=0.1.0"
amplifier-profiles = ">=0.1.0"

[tool.amplifier.collection.upstream]
source = "https://github.com/obra/superpowers.git"
version = "v3.6.2"
integration = "git-submodule"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
